--- a/mmt/package.json
+++ b/mmt/package.json
@@ -31,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch --port 8080 db.json"
   },
   "eslintConfig": {
     "extends": "react-app"
