--- a/mmt/package.json
+++ b/mmt/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^6.6.5",
     "react": "^17.0.2",
