--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Akash Surve",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^0.17.0"
+    "express": "^4.18.1",
+    "mongoose": "^6.6.4"
   }
 }
