--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Akash Surve",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mongoose": "^6.6.4"
   }
